[gd_scene load_steps=14 format=3 uid="uid://cynbl4cg4r48"]

[ext_resource type="Environment" uid="uid://cd0matqn3403j" path="res://Scenes/environment.tres" id="1_tfte1"]
[ext_resource type="Material" uid="uid://dncq45vdrwcl" path="res://Scenes/proto.tres" id="2_gh0dx"]
[ext_resource type="Texture2D" uid="uid://cmpoxee6hol2i" path="res://Sprites/Dark/texture_06.png" id="2_sv5u1"]
[ext_resource type="Material" uid="uid://bt28reqkg8ufo" path="res://Materials/White.tres" id="3_at76x"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="3_d4dpk"]
[ext_resource type="Script" path="res://Scripts/Movingbox.gd" id="4_623d8"]
[ext_resource type="Material" uid="uid://c1ncy772euapg" path="res://Scenes/China.tres" id="5_4ufxk"]
[ext_resource type="Theme" uid="uid://cpckw12m0xchx" path="res://Theme.tres" id="5_cnxtt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4pe5h"]
albedo_texture = ExtResource("2_sv5u1")
uv1_scale = Vector3(7, 5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vid5"]
albedo_texture = ExtResource("2_sv5u1")
uv1_scale = Vector3(7, 7, 7)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yjhah"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_a7i88"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_miyyb"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="world" type="Node3D"]

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = ExtResource("1_tfte1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="stage" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -1, 2.08165e-12)
use_collision = true
size = Vector3(200, 1, 200)
material = ExtResource("2_gh0dx")

[node name="Box" type="CSGBox3D" parent="stage"]
transform = Transform3D(-0.0389459, -0.999241, 0, 0.999241, -0.0389459, 0, 0, 0, 1, 4.20876, 1.61926, 0)
use_collision = true
material = ExtResource("3_at76x")

[node name="Box2" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, -6.50845e-16, 1.74393e-16, 1.74393e-16, 0.5, 0.866025, -6.50845e-16, -0.866025, 0.5, 4.20876, -0.104333, -14.1951)
material_override = SubResource("StandardMaterial3D_4pe5h")
use_collision = true
size = Vector3(13.1939, 5.70336, 0.074281)
material = ExtResource("3_at76x")

[node name="Box3" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, -1.5246e-23, -1.5246e-23, -4.37114e-08, -1, 0, 1, -4.37114e-08, 4.20876, 1.87592, -32.561)
material_override = ExtResource("5_4ufxk")
use_collision = true
size = Vector3(13.1939, 5.70336, 0.074281)
material = ExtResource("3_at76x")
script = ExtResource("4_623d8")

[node name="Area3D" type="Area3D" parent="stage/Box3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="stage/Box3/Area3D"]

[node name="CSGTorus3D" type="CSGTorus3D" parent="stage"]
transform = Transform3D(5.97, -8.81977e-16, -1.70151e-15, -1.70151e-15, -4.87835, -3.4413, -8.81977e-16, 3.4413, -4.87835, 24.8414, -0.104332, -7.43038)
use_collision = true
material = SubResource("StandardMaterial3D_3vid5")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.710023, 0)
script = ExtResource("3_d4dpk")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.567791, 0, 0, 0, 1, 2.08165e-12, -0.4, 2.08165e-12)
shape = SubResource("ConvexPolygonShape3D_yjhah")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
visible = false
mesh = SubResource("CapsuleMesh_a7i88")

[node name="standing_collision_shape" type="CollisionShape3D" parent="Player"]
shape = SubResource("ConvexPolygonShape3D_miyyb")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.6, 2.08165e-12)

[node name="Camera3D" type="Camera3D" parent="Player/Head"]

[node name="RayCast3D" type="RayCast3D" parent="Player"]
target_position = Vector3(2.08165e-12, 2, 2.08165e-12)

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1951.0
offset_bottom = 1143.0

[node name="DebugGUI" type="Control" parent="GUI"]
anchors_preset = 0
offset_right = 1827.0
offset_bottom = 1252.0

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/DebugGUI"]
modulate = Color(0.109804, 0.145098, 0.2, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 24.0
offset_right = 1934.0
offset_bottom = 1123.0
theme = ExtResource("5_cnxtt")
bbcode_enabled = true
text = "Debug Menu: {\\n}"

[connection signal="area_entered" from="stage/Box3/Area3D" to="stage/Box3" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="stage/Box3/Area3D" to="stage/Box3" method="_on_area_3d_area_exited"]
